--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,9 @@ temp/
 tmp/
 .tmp/
 
+# Windows特殊文件
+nul
+
 # Elasticsearch SSL证书（安全敏感）
 src/main/resources/es/http_ca.crt
 src/main/resources/es/*.crt
