--- a/Vue/package.json
+++ b/Vue/package.json
@@ -12,10 +12,15 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
+    "@tanstack/vue-virtual": "^3.13.12",
     "axios": "^1.7.9",
+    "dayjs": "^1.11.18",
     "element-plus": "^2.7.8",
+    "lodash-es": "^4.17.21",
     "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^2.4.0",
     "quill": "^2.0.3",
+    "socket.io-client": "^4.8.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
@@ -23,6 +28,7 @@
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/test-utils": "^2.4.6",
     "jsdom": "^27.0.0",
+    "rollup-plugin-visualizer": "^6.0.5",
     "vite": "^5.4.11",
     "vite-plugin-vue-devtools": "^7.6.5",
     "vitest": "^3.2.4"
