--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -119,3 +119,14 @@ websocket:
   max-connections: 1000 # 最大连接数
   heartbeat-interval: 30 # 心跳间隔（秒）
   idle-timeout: 90 # 空闲超时（秒）
+
+# AI 服务配置
+ai:
+  provider: ollama # 默认AI提供商: ollama 或 deepseek
+  ollama:
+    base-url: "http://localhost:11434" # Ollama API基础URL
+    chat-model: "llama3.1" # 默认聊天模型
+  deepseek:
+    base-url: "https://api.deepseek.com" # DeepSeek API基础URL
+    api-key: "your_deepseek_api_key_here" # DeepSeek API Key (请替换为您的真实Key)
+    chat-model: "deepseek-chat" # 默认聊天模型
