--- a/Vue/package.json
+++ b/Vue/package.json
@@ -15,6 +15,7 @@
     "@tanstack/vue-virtual": "^3.13.12",
     "axios": "^1.7.9",
     "dayjs": "^1.11.18",
+    "dompurify": "^3.3.0",
     "element-plus": "^2.7.8",
     "lodash-es": "^4.17.21",
     "marked": "^16.4.1",
