--- a/src/main/resources/application-ai.properties
+++ b/src/main/resources/application-ai.properties
@@ -1,25 +1,59 @@
 # Spring AI Configuration
-# To enable AI features, please uncomment the following properties
-# and provide your OpenAI API key. Without a valid API key, the application
-# will fail to start when using the 'ai' profile.
+# To enable AI features, please uncomment one of the following provider configurations
+# and provide your API keys. Without valid configuration, AI features will be disabled.
 
+# ======================================
+# Option 1: Ollama (Local Open Source AI)
+# ======================================
+# ai.provider=ollama
+# ai.ollama.base-url=http://localhost:11434
+# ai.ollama.chat-model=llama2
+# Available models: llama2, codellama, mistral, vicuna, etc.
+
+# ======================================
+# Option 2: DeepSeek (Chinese AI Service)
+# ======================================
+# ai.provider=deepseek
+# ai.deepseek.base-url=https://api.deepseek.com
+# ai.deepseek.api-key=YOUR_DEEPSEEK_API_KEY
+# ai.deepseek.chat-model=deepseek-chat
+
+# ======================================
+# Option 3: OpenAI (Original AI Service)
+# ======================================
+# ai.provider=openai
 # spring.ai.openai.api-key=YOUR_OPENAI_API_KEY
 # spring.ai.openai.chat.options.model=gpt-3.5-turbo
 # spring.ai.openai.chat.options.temperature=0.7
 # spring.ai.openai.chat.options.max-tokens=1000
 
+# ======================================
 # AI Service Configuration
+# ======================================
 # ai.chat.context.ttl=30
 # ai.rate.limit.requests=100
 # ai.rate.limit.window=3600
 
+# ======================================
 # AI Feature Flags
+# ======================================
 # ai.feature.enabled=true
 # ai.feature.chat.enabled=true
 # ai.feature.article-assistant.enabled=true
 # ai.feature.translation.enabled=true
 # ai.feature.sentiment.enabled=true
 
+# ======================================
 # AI Cost Control
+# ======================================
 # ai.cost.daily-limit=10.00
 # ai.cost.user-limit=5.00
+
+# ======================================
+# Quick Setup Instructions:
+# 1. For Ollama: Install Ollama locally, then run: ollama pull llama2
+# 2. For DeepSeek: Register at https://platform.deepseek.com and get API key
+# 3. For OpenAI: Register at https://platform.openai.com and get API key
+# 4. Uncomment the provider configuration you want to use
+# 5. Start application with: mvn spring-boot:run -Dspring-boot.run.profiles=ai
+# ======================================
