--- a/pom.xml
+++ b/pom.xml
@@ -262,6 +262,13 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<!-- Springdoc OpenAPI (Swagger替代) -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.6.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<repositories>
